# fighting-game

./: Cargo.toml
.cargo/: config.toml
assets/: c1_idle.anim  c1_punch.anim  c1_walking.anim  c1_walking_v2.anim
src/: animation.rs  character.rs  effects.rs  fixedpoint.rs  main.rs  movelist.rs  physics.rs  ui.rs  vec2.rs
